# audiobook-tool

./: .gitignore  .gitlab-ci.yml  README.md  metadata.template.yml  pyproject.toml  stubs.md
src/audiobook/: __init__.py  app.py  args.py  cli.py  config.py  core.py  env.py  utils.py
src/audiobook/audible/: __init__.py  audible.json  content.py  cover.py  json.py  metadata.py  parser.py  temp.py  yml.py
src/audiobook/audio/: __init__.py  audio_metadata.py  audio_metadata_manager.py  chapter_dict.py  m4b_handler.py  metadata_encoder.py  mp3_handler.py
src/audiobook/clean/: __init__.py  clean_covers.py  clean_silences.py  clean_track_titles.py
src/audiobook/command/: __init__.py  audible.py  build.py  clean.py  extract.py  forge.py  fusion.py
src/audiobook/config/: __init__.py  config_build.py  config_extract.py  config_forge.py
src/audiobook/core/: __init__.py  m4b_tagger.py  metadata_loader.py  split_m4b.py
src/audiobook/extract/: __init__.py  extractor.py
src/audiobook/forge/: __init__.py  audio_chapter.py  audiobook_blacksmith.py  audiobook_fixer.py  audiobook_forge.py  ffmpeg_runner.py
src/audiobook/m4b/: __init__.py  m4b_chapter.py  m4b_chapter_editor.py  m4b_merger.py  m4b_parser.py  m4b_renamer.py  m4b_split.py  m4b_tagger.py  m4b_tagger_custom.py  m4b_to_mp3_plitter.py
src/audiobook/metadata/: __init__.py  clean_mp3.py  metadata_audiobook.py  metadata_chapter.py  metadata_file.py  metadata_loader.py  metadata_yml.py
src/audiobook/mp3/: __init__.py  (+1 more)
src/old/: app.py  metadata.py  utils.py
tests/audio/: test_audio_metadata_manager.py
(+26 files in other folders)
