[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "audiobook-cli"
version = "0.1.0"
dependencies = ["pyyaml", "mutagen", "dotenv", "isodate"]
requires-python = ">=3.12"
readme = "README.md"
description = "Handle audiobooks with Python."
authors = [{ name = "Ewilan Rivière" }]

[project.scripts]
audiobook-tool = "audiobook.app:main"

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]
